@@ -17,22 +17,22 @@
 
 package org.wildfly.prospero.cli;
 
-import org.jboss.logging.Logger;
+import org.apache.commons.lang3.StringUtils;
 import org.wildfly.channel.Repository;
 
 import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.InvalidPathException;
 import java.nio.file.Path;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 public class RepositoryDefinition {
 
-    private static final Logger logger = Logger.getLogger(RepositoryDefinition.class.getName());
+    private static final List<String> ALLOWED_SCHEMAS = Arrays.asList("file", "http", "https");
 
     public static List<Repository> from(List<String> repos) throws ArgumentParsingException {
         final ArrayList<Repository> repositories = new ArrayList<>(repos.size());
@@ -41,81 +41,85 @@ public class RepositoryDefinition {
             final String repoId;
             final String repoUri;
 
-            try {
-                if (repoInfo.contains("::")) {
-                    final String[] parts = repoInfo.split("::");
-                    if (parts.length != 2 || parts[0].isEmpty() || parts[1].isEmpty()) {
-                        throw CliMessages.MESSAGES.invalidRepositoryDefinition(repoInfo);
-                    }
-                    repoId = parts[0];
-                    repoUri = parseRepositoryLocation(parts[1]);
-                } else {
-                    repoId = "temp-repo-" + i;
-                    repoUri = parseRepositoryLocation(repoInfo);
+            if (repoInfo.contains("::")) {
+                final String[] parts = repoInfo.split("::");
+                if (parts.length != 2 || parts[0].isEmpty() || parts[1].isEmpty()) {
+                    throw CliMessages.MESSAGES.invalidRepositoryDefinition(repoInfo);
                 }
-                repositories.add(new Repository(repoId, repoUri));
-            } catch (URISyntaxException e) {
-                logger.error("Unable to parse repository uri + " + repoInfo, e);
-                throw CliMessages.MESSAGES.invalidRepositoryDefinition(repoInfo);
+                repoId = parts[0];
+                repoUri = parseRepositoryLocation(parts[1], true);
+            } else {
+                if (StringUtils.isBlank(repoInfo)) {
+                    throw CliMessages.MESSAGES.invalidRepositoryDefinition(repoInfo);
+                }
+                repoId = "temp-repo-" + i;
+                repoUri = parseRepositoryLocation(repoInfo, true);
             }
 
+            repositories.add(new Repository(repoId, repoUri));
         }
         return repositories;
     }
 
-    private static String parseRepositoryLocation(String repoLocation) throws URISyntaxException, ArgumentParsingException {
-        if (!isRemoteUrl(repoLocation) && !repoLocation.isEmpty()) {
-            // the repoLocation contains either a file URI or a path
-            // we need to convert it to a valid file IR
-            repoLocation = getAbsoluteFileURI(repoLocation).toString();
-        }
-        if (!isValidUrl(repoLocation)){
-            throw CliMessages.MESSAGES.invalidRepositoryDefinition(repoLocation);
-        }
-        return repoLocation;
-    }
-
-    private static boolean isRemoteUrl(String repoInfo) {
-        return repoInfo.startsWith("http://") || repoInfo.startsWith("https://");
-    }
-
-    private static boolean isValidUrl(String text) {
+    static String parseRepositoryLocation(String location, boolean checkLocalPathExists) throws ArgumentParsingException {
+        URI uri;
         try {
-            new URL(text);
-            return true;
-        } catch (MalformedURLException e) {
-            return false;
-        }
-    }
+            uri = new URI(location);
 
-    public static URI getAbsoluteFileURI(String repoInfo) throws ArgumentParsingException, URISyntaxException {
-        final Path repoPath = getPath(repoInfo).toAbsolutePath().normalize();
-        if (Files.exists(repoPath)) {
-            return repoPath.toUri();
-        } else {
-            throw CliMessages.MESSAGES.nonExistingFilePath(repoPath);
-        }
-    }
+            if ("file".equals(uri.getScheme()) || StringUtils.isBlank(uri.getScheme())) {
+                if (StringUtils.isNotBlank(uri.getHost())) {
+                    throw CliMessages.MESSAGES.unsupportedRemoteScheme(location);
+                }
 
-    public static Path getPath(String repoInfo) throws URISyntaxException, ArgumentParsingException {
-        if (repoInfo.startsWith("file:")) {
-            final URI inputUri = new URI(repoInfo);
-            if (containsAbsolutePath(inputUri)) {
-                return Path.of(inputUri);
-            } else {
-                return Path.of(inputUri.getSchemeSpecificPart());
+                // A "file:" URI with an empty host is assumed to be a local filesystem URL. An empty scheme would mean
+                // a URI that is just a path without any "proto:" part, which is still assumed a local path.
+                // A "file:" URI with a non-empty host would signify a remote URL, in which case we don't process it
+                // further.
+                if (!uri.isOpaque() && StringUtils.isNotBlank(uri.getScheme())) {
+                    // The path starts with '/' character (not opaque) and has a scheme defined -> we can use
+                    // `Path.of(uri)` to transform into a path, which gracefully handles Windows paths etc.
+                    uri = normalizeLocalPath(Path.of(uri), checkLocalPathExists).toUri();
+                } else {
+                    // This is to handle relative URLs like "file:relative/path", which is outside of spec (URI is not
+                    // hierarchical -> cannot use `Path.of(uri)`). Note that `uri.getSchemeSpecificPart()` rather than
+                    // `uri.getPath()` because the URI class doesn't parse the path portion for opaque URIs.
+                    uri = normalizeLocalPath(Path.of(uri.getSchemeSpecificPart()), checkLocalPathExists).toUri();
+                }
             }
-        } else {
+
+            // Resulting URI must be convertible to URL.
+            //noinspection ResultOfMethodCallIgnored
+            uri.toURL();
+
+            // Check it is supported scheme.
+            if (StringUtils.isNotBlank(uri.getScheme()) && !ALLOWED_SCHEMAS.contains(uri.getScheme())) {
+                throw CliMessages.MESSAGES.unsupportedScheme(location);
+            }
+        } catch (URISyntaxException | MalformedURLException e) {
             try {
-                return Path.of(repoInfo);
-            } catch (InvalidPathException e) {
-                throw CliMessages.MESSAGES.invalidFilePath(repoInfo, e);
+                // If the location is not a valid URI / URL, try to handle it as a path.
+                Path path = Path.of(location);
+                uri = normalizeLocalPath(path, checkLocalPathExists).toUri();
+            } catch (InvalidPathException e2) {
+                throw CliMessages.MESSAGES.invalidFilePath(location, e);
             }
+        } catch (IllegalArgumentException e) {
+            throw CliMessages.MESSAGES.invalidFilePath(location, e);
+        }
+
+        try {
+            return uri.toURL().toExternalForm();
+        } catch (MalformedURLException | IllegalArgumentException e) {
+            throw CliMessages.MESSAGES.invalidFilePath(location, e);
         }
     }
 
-    private static boolean containsAbsolutePath(URI inputUri) {
-        // absolute paths in URI (even on Windows) has to start with slash. If not we treat it as a relative path
-        return inputUri.getSchemeSpecificPart().startsWith("/");
+    private static Path normalizeLocalPath(Path path, boolean checkPathExists) throws ArgumentParsingException {
+        Path normalized = path.toAbsolutePath().normalize();
+        if (checkPathExists && !Files.exists(path)) {
+            throw CliMessages.MESSAGES.nonExistingFilePath(normalized);
+        }
+        return normalized;
     }
+
 }
